增加源码部署jenkins的笔记